--- a/recipes/recipe/templates/recipe_details.html
+++ b/recipes/recipe/templates/recipe_details.html
@@ -17,23 +17,59 @@
 
 <body>
     <div id="recipe">
-        <div class="container">
-            <div v-if="!error.state" class="row">
-                <h1 >${recipe.title}</h1>
-                <table class="table">
-                    <tbody>
-                        <tr v-for="step in steps">
-                            <td>${step.ingredient_amount}</td>
-                            <td>${step.action}</td>
-                        </tr>
-                    </tbody>
-                </table>
+        <div v-if="!error.state" class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h1>${recipe.title}</h1>
+                    <h5>
+                        <span v-for="(foo, i) in Math.round(recipe.rating)">*</span>
+                    </h5>
+                </div>
+                <div class="col-sm-6 text-right">
+                    <h5>By ${"User"}</h5>
+
+                </div>
+                <div class="col-md-12">
+                    <p>
+                        ${recipe.description}
+                    </p>
+                </div>
             </div>
-            <div v-else>
-                <h1>Error ${error.code}: ${error.text}</h1>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h5>Manual</h5>
+                </div>
+                <div class="col-sm-6 text-right">
+                    <span>For ${recipe.forAmountOfPersons}</span>
+                </div>
+                <div class="col-md-12">
+                    <table class="table">
+                        <tbody>
+                            <tr v-for="(step, i) in steps">
+                                <th>${i+1}</th>
+                                <td>
+                                    <input type="text" placeholder="Amount" style="background: none; border: none; color: black;">
+                                </td>
+                                <td>
+                                    <input type="text" placeholder="Ingredient" style="background: none; border: none; color: black;">
+                                </td>
+                                <td>
+                                    <textarea v-model="step.action" placeholder="Action" style="background: none; border: none; color: black;"></textarea>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
+
+
         </div>
-        <div class="loading" v-if="loading===true">Loading&#8230;</div>
+        <div v-else>
+            <h1>Error ${error.code}: ${error.text}</h1>
+        </div>
+    </div>
+
+    <div class="loading" v-if="loading===true">Loading&#8230;</div>
     </div>
 
 
@@ -75,20 +111,22 @@
                     text: null
                 }
             },
-            mounted: function()
+            mounted: function ()
             {
                 var recipe_id = parseInt("{{recipe_id}}");
                 this.getRecipe(recipe_id);
             },
             methods:
-            {                
+            {
                 getRecipe: function (id)
                 {
                     this.loading = true;
-                    this.$http.get(`/api/recipe/${id}`)
+                    this.$http.get(`/api/recipe/${id}/`)
                         .then((response) => 
                         {
                             this.recipe = response.data;
+                            this.getStepsAsText(this.recipe.steps)
+
                             this.loading = false;
                         })
                         .catch((err) => 
@@ -131,6 +169,43 @@
                             console.log(err);
                         })
                 },
+
+                getStepsAsText: function (stepIds)
+                {
+                    this.loading = true;
+                    for (var i = 0; i < stepIds.length; i++)
+                    {
+                        this.$http.get(`/api/step/${stepIds[i]}/`)
+                            .then((response) => 
+                            {
+                                var _step = response.data;
+                                this.getActionAndPushStep(_step.action, _step)
+                            })
+                            .catch((err) => 
+                            {
+                                console.log(err);
+                            })
+                    }
+                    this.loading = false;
+                },
+                makeStepText: function (stepObject)
+                {
+                    return `${stepObject.action}`
+                },
+                getActionAndPushStep: function (id, step)
+                {
+                    this.$http.get(`/api/action/${id}/`)
+                        .then((response) => 
+                        {
+                            console.log(response.data)
+                            step.action = response.data.description
+                            this.steps.push(step);
+                        })
+                        .catch((err) => 
+                        {
+                            console.log(err);
+                        })
+                }
             }
         })
     </script>
