--- a/recipes/recipe/templates/recipe_details.html
+++ b/recipes/recipe/templates/recipe_details.html
@@ -13,6 +13,8 @@
         crossorigin="anonymous">
     <!-- boostrap css -->
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -22,12 +24,11 @@
                 <div class="col-sm-6">
                     <h1>${recipe.title}</h1>
                     <h5>
-                        <span v-for="(foo, i) in Math.round(recipe.rating)">*</span>
+                        <i v-for="(foo, i) in Math.round(recipe.rating)" class="fas fa-star" style="color: gold;"></i>
                     </h5>
                 </div>
                 <div class="col-sm-6 text-right">
                     <h5>By ${"User"}</h5>
-
                 </div>
                 <div class="col-md-12">
                     <p>
@@ -37,24 +38,18 @@
             </div>
             <div class="row">
                 <div class="col-sm-6">
-                    <h5>Manual</h5>
+                    <h5>Steps</h5>
                 </div>
                 <div class="col-sm-6 text-right">
-                    <span>For ${recipe.forAmountOfPersons}</span>
+                    <span>Recipe for ${recipe.forAmountOfPersons}</span>
                 </div>
                 <div class="col-md-12">
                     <table class="table">
                         <tbody>
                             <tr v-for="(step, i) in steps">
-                                <th>${i+1}</th>
+                                <th style="width: 75px;">${i+1}</th>
                                 <td>
-                                    <input type="text" placeholder="Amount" style="background: none; border: none; color: black;">
-                                </td>
-                                <td>
-                                    <input type="text" placeholder="Ingredient" style="background: none; border: none; color: black;">
-                                </td>
-                                <td>
-                                    <textarea v-model="step.action" placeholder="Action" style="background: none; border: none; color: black;"></textarea>
+                                    <input v-model="step.text" type="text" placeholder="What to do" style="background: none; border: none; color: inherit;">
                                 </td>
                             </tr>
                             
@@ -91,9 +86,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.3.5 "></script>
-
-
-
     <script type="text/javascript">
         new Vue({
             el: '#recipe',
@@ -128,7 +120,7 @@
                         .then((response) => 
                         {
                             this.recipe = response.data;
-                            this.getStepsAsText(this.recipe.steps)
+                            this.getStepsAsTextAndPush(this.recipe.steps)
 
                             this.loading = false;
                         })
@@ -173,7 +165,7 @@
                         })
                 },
 
-                getStepsAsText: function (stepIds)
+                getStepsAsTextAndPush: function (stepIds)
                 {
                     this.loading = true;
                     for (var i = 0; i < stepIds.length; i++)
@@ -181,8 +173,8 @@
                         this.$http.get(`/api/step/${stepIds[i]}/`)
                             .then((response) => 
                             {
-                                var _step = response.data;
-                                this.getActionAndPushStep(_step.action, _step)
+                                console.log(response.data)
+                                this.steps.push(response.data);
                             })
                             .catch((err) => 
                             {
@@ -200,9 +192,7 @@
                     this.$http.get(`/api/action/${id}/`)
                         .then((response) => 
                         {
-                            console.log(response.data)
-                            step.action = response.data.description
-                            this.steps.push(step);
+
                         })
                         .catch((err) => 
                         {
