started with the admin and smaller fixes

--- a/recipes/recipe/templates/recipe_details.html
+++ b/recipes/recipe/templates/recipe_details.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="/recipes/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/recipes/">Discrover</a>
+                    <a class="nav-link" href="/recipes/">Discover</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-sm-0">
