--- a/recipes/recipe/templates/recipes.html
+++ b/recipes/recipe/templates/recipes.html
@@ -34,7 +34,7 @@
                         <div v-for="recipe in recommended_recipes" class="col-lg-4 col-sm-6" style="margin-bottom: 15px;">
                             <div class="card" style="z-index: 999; box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important">
                                 <img class="card-img-top" v-bind:src="recipe.image"
-                                    alt="Card image">
+                                    alt="">
                                 <div class="card-body">
                                     <h5 class="card-title">${recipe.title}</h5>
                                     <p class="card-text">
